--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "type": "module",
   "scripts": {
     "start": "vite --host 0.0.0.0",
+    "serve": "node server/server.cjs",
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@types/socket.io-client": "^3.0.0",
+    "cors": "^2.8.5",
     "express": "^4.19.2",
     "mongoose": "^8.2.4",
     "react": "^18.2.0",
@@ -21,6 +22,7 @@
     "ws": "^8.16.0"
   },
   "devDependencies": {
+    "@types/express": "^4.17.21",
     "@types/react": "^18.2.73",
     "@types/react-dom": "^18.2.23",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
